--- a/oystercatchers.tex
+++ b/oystercatchers.tex
@@ -37,37 +37,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{{#1}}}}
-\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{{#1}}}
-\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{{#1}}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{{#1}}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{{#1}}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\ImportTok}[1]{{#1}}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{{#1}}}}
-\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{{#1}}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{{#1}}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{{#1}}}}
-\newcommand{\BuiltInTok}[1]{{#1}}
-\newcommand{\ExtensionTok}[1]{{#1}}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{{#1}}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{{#1}}}
-\newcommand{\RegionMarkerTok}[1]{{#1}}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{{#1}}}
-\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{{#1}}}}
-\newcommand{\NormalTok}[1]{{#1}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -126,7 +126,7 @@
 \begin{document}
 \maketitle
 
-\subsection{Introduction}\label{introduction}
+\subsection{1. Introduction}\label{introduction}
 
 Often you will receive complex data-sets, but initial analyses can be
 confusing, and it may require careful interpretation of model outputs to
@@ -138,11 +138,17 @@ websites, and I particularly recommend The R Cookbook
 the associated book. The book R for Data Science by Hadley Wickham
 (author of ggplot2 etc.) and its website
 \url{https://r4ds.had.co.nz/index.html} are also excellent sources. The
-aims of this practical are to: * show you how to explore ecological
-data, with common mistakes * use diagnostic plots to gain better
-insights
+aims of this practical are to:
 
-\subsection{The data}\label{the-data}
+\begin{itemize}
+\tightlist
+\item
+  show you how to explore ecological data, with common mistakes
+\item
+  use diagnostic plots to gain better insights
+\end{itemize}
+
+\subsection{2. The data}\label{the-data}
 
 The data are from a 3-year study into American oystercatchers,
 \emph{Haematopus palliatus}, inhabitating coastal areas near Buenos
@@ -160,32 +166,257 @@ stabbers. Time of year, and location may also affect what is happening,
 so we could be looking at a complex 3-way interaction between feeding
 type (stabber/hammerer), feeding plot and month.
 
-\subsection{}\label{section}
+\subsection{3. Import the data and initial
+inspection}\label{import-the-data-and-initial-inspection}
+
+Download the file ``OystercatcherData.txt'' from Blackboard, create a
+new project for your oystercatcher data, and within the project create a
+subfolder called ``data'' in which to store the downloaded data file.
+Create an R script, and import the oystercatcher data into a tibble OC.
+As this is tab-separated text format (readable in Excel on Windows),
+we'll use read\_tsv rather than read\_csv:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{summary}\NormalTok{(cars)}
+\KeywordTok{library}\NormalTok{(readr)}
+\NormalTok{OC <-}\StringTok{ }\KeywordTok{read_tsv}\NormalTok{(}\StringTok{"data/OystercatcherData.txt"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00
+## Parsed with column specification:
+## cols(
+##   ShellLength = col_double(),
+##   Month = col_character(),
+##   FeedingType = col_character(),
+##   FeedingPlot = col_character()
+## )
 \end{verbatim}
 
-\subsection{Including Plots}\label{including-plots}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{summary}\NormalTok{(OC)}
+\end{Highlighting}
+\end{Shaded}
 
-You can also embed plots, for example:
+\begin{verbatim}
+##   ShellLength       Month           FeedingType        FeedingPlot       
+##  Min.   :1.080   Length:197         Length:197         Length:197        
+##  1st Qu.:1.850   Class :character   Class :character   Class :character  
+##  Median :2.110   Mode  :character   Mode  :character   Mode  :character  
+##  Mean   :2.093                                                           
+##  3rd Qu.:2.290                                                           
+##  Max.   :3.600
+\end{verbatim}
 
-\includegraphics{oystercatchers_files/figure-latex/pressure-1.pdf}
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{# Set the Month, FeedingType and FeedingPlot as factors}
+\NormalTok{OC}\OperatorTok{$}\NormalTok{Month <-}\StringTok{ }\KeywordTok{as.factor}\NormalTok{(OC}\OperatorTok{$}\NormalTok{Month)}
+\NormalTok{OC}\OperatorTok{$}\NormalTok{FeedingType <-}\StringTok{ }\KeywordTok{as.factor}\NormalTok{(OC}\OperatorTok{$}\NormalTok{FeedingType)}
+\NormalTok{OC}\OperatorTok{$}\NormalTok{FeedingPlot <-}\StringTok{ }\KeywordTok{as.factor}\NormalTok{(OC}\OperatorTok{$}\NormalTok{FeedingPlot)}
+\KeywordTok{summary}\NormalTok{(OC)}
+\end{Highlighting}
+\end{Shaded}
 
-Note that the \texttt{echo\ =\ FALSE} parameter was added to the code
-chunk to prevent printing of the R code that generated the plot.
+\begin{verbatim}
+##   ShellLength    Month        FeedingType  FeedingPlot
+##  Min.   :1.080   Dec: 79   Hammerers:165   A:66       
+##  1st Qu.:1.850   Jan:118   Stabbers : 32   B:53       
+##  Median :2.110                             C:78       
+##  Mean   :2.093                                        
+##  3rd Qu.:2.290                                        
+##  Max.   :3.600
+\end{verbatim}
+
+\subsubsection{Initial boxplots}\label{initial-boxplots}
+
+A good initial starting point is to produce some boxplots to explore the
+data. Using ggplot2, see if you can produce some boxplots similar to
+this, for each of the three factors. Store the plots in three ggplot
+objects p1, p2 and p3.
+
+\includegraphics{oystercatchers_files/figure-latex/boxplots-1.pdf}
+
+It would be useful to display all three ggplot graphs in one plot,
+rather than three separate ones. Go to the R Graphics Cookbook website
+\url{http://www.cookbook-r.com/Graphs/Multiple_graphs_on_one_page_(ggplot2)/}
+or search on Google for ``R Graphics Cookbook multiplot''. You will see
+the page has a simple(?!) R function called ``multiplot'', so copy this
+into your R script and run it to make it available. Note that multiplot
+uses the ``grid'' package so check that it is installed. Then all you
+need is:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{multiplot}\NormalTok{(p1, p2, p3, }\DataTypeTok{cols=}\DecValTok{2}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{oystercatchers_files/figure-latex/display multiplot-1.pdf}
+
+Finally, using the \texttt{table} function provides an easy way of
+checking the number of oberservations per month, per feeding plot, and
+per feeding type. This is useful to check that there seem to be a
+reasonable number of observations to proceed with the analysis.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{table}\NormalTok{(OC}\OperatorTok{$}\NormalTok{Month)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## 
+## Dec Jan 
+##  79 118
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{table}\NormalTok{(OC}\OperatorTok{$}\NormalTok{FeedingPlot)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## 
+##  A  B  C 
+## 66 53 78
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{table}\NormalTok{(OC}\OperatorTok{$}\NormalTok{FeedingType)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## 
+## Hammerers  Stabbers 
+##       165        32
+\end{verbatim}
+
+\emph{Note}: as we will see later, we have actually made a major error
+here. There is in reality a problem with the data, and so really we
+should not have stopped exploring it now before going ahead with our
+analyses. We will come back to this issue\ldots{}
+
+\subsection{4. Applying a linear regression
+model}\label{applying-a-linear-regression-model}
+
+We're going to do a simple linear model with the \texttt{lm} command,
+looking at all interactions. With so many different predictors in the
+model it is sometimes useful to use the \texttt{drop1} command to check
+that the higher-level 3-way interaction terms are significant:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{M1 <-}\StringTok{ }\KeywordTok{lm}\NormalTok{(ShellLength }\OperatorTok{~}\StringTok{ }\NormalTok{FeedingType }\OperatorTok{*}\StringTok{ }\NormalTok{FeedingPlot }\OperatorTok{*}\StringTok{ }\NormalTok{Month,}
+         \DataTypeTok{data =}\NormalTok{ OC)}
+\KeywordTok{print}\NormalTok{(}\KeywordTok{summary}\NormalTok{(M1), }\DataTypeTok{digits =} \DecValTok{2}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## 
+## Call:
+## lm(formula = ShellLength ~ FeedingType * FeedingPlot * Month, 
+##     data = OC)
+## 
+## Residuals:
+##    Min     1Q Median     3Q    Max 
+## -0.698 -0.192  0.009  0.178  1.392 
+## 
+## Coefficients:
+##                                           Estimate Std. Error t value
+## (Intercept)                                  2.208      0.076    29.0
+## FeedingTypeStabbers                          0.632      0.234     2.7
+## FeedingPlotB                                 0.124      0.113     1.1
+## FeedingPlotC                                -0.197      0.098    -2.0
+## MonthJan                                    -0.076      0.090    -0.8
+## FeedingTypeStabbers:FeedingPlotB            -0.936      0.286    -3.3
+## FeedingTypeStabbers:FeedingPlotC            -0.573      0.255    -2.2
+## FeedingTypeStabbers:MonthJan                -0.987      0.286    -3.5
+## FeedingPlotB:MonthJan                       -0.234      0.135    -1.7
+## FeedingPlotC:MonthJan                        0.105      0.121     0.9
+## FeedingTypeStabbers:FeedingPlotB:MonthJan    1.308      0.380     3.4
+## FeedingTypeStabbers:FeedingPlotC:MonthJan    0.901      0.357     2.5
+##                                           Pr(>|t|)    
+## (Intercept)                                 <2e-16 ***
+## FeedingTypeStabbers                          0.008 ** 
+## FeedingPlotB                                 0.275    
+## FeedingPlotC                                 0.045 *  
+## MonthJan                                     0.401    
+## FeedingTypeStabbers:FeedingPlotB             0.001 ** 
+## FeedingTypeStabbers:FeedingPlotC             0.026 *  
+## FeedingTypeStabbers:MonthJan                 7e-04 ***
+## FeedingPlotB:MonthJan                        0.085 .  
+## FeedingPlotC:MonthJan                        0.389    
+## FeedingTypeStabbers:FeedingPlotB:MonthJan    7e-04 ***
+## FeedingTypeStabbers:FeedingPlotC:MonthJan    0.013 *  
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 0.31 on 185 degrees of freedom
+## Multiple R-squared:  0.15,   Adjusted R-squared:  0.094 
+## F-statistic: 2.9 on 11 and 185 DF,  p-value: 0.0018
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{drop1}\NormalTok{(M1, }\DataTypeTok{test =} \StringTok{"F"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Single term deletions
+## 
+## Model:
+## ShellLength ~ FeedingType * FeedingPlot * Month
+##                               Df Sum of Sq    RSS     AIC F value   Pr(>F)
+## <none>                                     18.170 -445.54                 
+## FeedingType:FeedingPlot:Month  2    1.1962 19.366 -436.98  6.0896 0.002746
+##                                 
+## <none>                          
+## FeedingType:FeedingPlot:Month **
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+\end{verbatim}
+
+So, we can conclude that the 3-way term of Feeding Type x Feeding Plot x
+Month is significant. Of course, being good ecological data scientists
+you know by now that it is not sufficient just to look at the tabular
+output of a linear model, but also want the graphical output. Issue the
+command \texttt{plot(M1)} to check the overall model diagnostics; what
+is your interpretation of the four standard plots, especially the first
+(Residuals vs Fitted) and second (Normal Q-Q plot)??
+
+Here you have three categorical predictors, so sometimes it is useful to
+look at the residuals for each predictor separately. Here is the code
+for the Feeding Type:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{E1 <-}\StringTok{ }\KeywordTok{rstandard}\NormalTok{(M1) }\CommentTok{# Extract standardised residuals}
+\NormalTok{p1r <-}\StringTok{ }\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data=}\NormalTok{OC, }\KeywordTok{aes}\NormalTok{(}\DataTypeTok{x=}\NormalTok{FeedingType, }\DataTypeTok{y=}\NormalTok{E1)) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_boxplot}\NormalTok{() }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_hline}\NormalTok{(}\KeywordTok{aes}\NormalTok{(}\DataTypeTok{yintercept=}\DecValTok{0}\NormalTok{), }\DataTypeTok{linetype=}\StringTok{"dashed"}\NormalTok{) }\OperatorTok{+}
+\StringTok{  }\KeywordTok{theme_classic}\NormalTok{()}
+\NormalTok{p1r}
+\end{Highlighting}
+\end{Shaded}
+
+\includegraphics{oystercatchers_files/figure-latex/feeding type resids-1.pdf}
+
+Modify the code for Feeding plot and month - do the residuals seem
+roughly similar for each level of each factor, and centred around zero?
+Use multiplot to but all three plots side-by-side.
+
+\subsection{5. Model interpretation}\label{model-interpretation}
+
+Given that there seem to be no major problems with our linear model, we
+can now go ahead and interpret what is going on in more detail. Remember
+that the value labelled
 
 
 \end{document}
